app/src/main/java/com/example/basecleanarchitechturedagger/data/remote/entity/error/NetworkError.kt
package com.example.basecleanarchitechturedagger.data.remote.entity.error

data class NetworkError(override var status: Int = 0) : ErrorInterface
